--- a/package.json
+++ b/package.json
@@ -7,24 +7,88 @@
   "dependencies": {
     "@types/classnames": "0.0.32",
     "@types/js-cookie": "^2.0.28",
-    "@types/react": "15.6.2",
     "@types/googlemaps": "^3.26.15",
     "@types/prop-types": "^15.5.1",
     "@types/rbush": "^2.0.2",
+    "@types/express": "^4.0.35",
+    "@types/express-handlebars": "^0.0.29",
+    "@types/request": "^0.0.45",
+    "@types/mocha": "^2.2.39",
+    "@types/compression": "^0.0.33",
+    "@types/underscore": "^1.7.36",
+    "@types/react": "15.6.2",
+    "@types/react-addons-test-utils": "^0.14.17",
+    "@types/react-bootstrap": "^0.0.49",
+    "@types/react-copy-to-clipboard": "^4.2.3",
+    "@types/react-dnd": "^2.0.34",
+    "@types/react-dnd-html5-backend": "^2.1.8",
     "@types/react-dom": "^15.5.4",
+    "@types/react-dropzone": "0.0.28",
+    "@types/react-measure": "^0.4.6",
+    "@types/react-redux": "^4.4.38",
+    "@types/react-router-dom": "^4.0.8",
+    "@types/react-tabs": "^0.5.21",
+    "@types/react-tap-event-plugin": "^0.0.30",
+    "@types/redux-mock-store": "^0.0.7",
+    "@types/chai": "^3.4.35",
+    "@types/tmp": "^0.0.32",
+    "@types/geojson": "0.0.31",
+    "@types/chai-as-promised": "^0.0.29",
+    "@types/cookie": "^0.3.0",
+    "@types/sprintf-js": "0.0.27",
+    "@types/json-stable-stringify": "^1.0.29",
+    "@types/google.analytics": "0.0.28",
+    "@types/chai-http": "^0.0.30",
+    "@types/jsonwebtoken": "^7.2.0",
+    "@types/node-cache": "^3.0.31",
+    "@types/ws": "^3.0.2",
     "license-webpack-plugin": "^1.1.1",
     "nodemon": "^1.15.1",
+    "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
+    "chai-http": "^3.0.0",
+    "chai-roughly": "^1.0.0",
     "topojson-client": "^2.1.0",
+    "react-router-dom": "^4.2.2",
     "awesome-typescript-loader": "^3.0.0-beta.18",
     "typescript": "^2.6.2",
     "underscore": "^1.8.3",
+    "cookie": "^0.3.1",
+    "tmp": "^0.0.31",
+    "redux": "^3.7.1",
+    "react": "^15.4.2",
+    "react-addons-test-utils": "^15.4.2",
+    "react-bootstrap": "^0.30.10",
+    "react-color": "^2.2.7",
+    "react-copy-to-clipboard": "^5.0.1",
+    "react-dnd": "^2.5.1",
+    "react-dnd-html5-backend": "^2.5.1",
+    "react-dom": "^15.4.2",
+    "react-dropzone": "^3.6.0",
+    "react-file-reader": "^1.1.1",
+    "react-image-magnify": "^1.8.0",
+    "react-measure": "^1.4.7",
+    "react-redux": "^5.0.4",
+    "react-resizable": "^1.7.5",
+    "react-router-hash-link": "^1.1.1",
+    "react-tabs": "^0.8.2",
+    "react-tap-event-plugin": "^2.0.1",
+    "react-upload-file": "^2.0.0-beta.6",
+    "reactable": "^0.14.1",
+    "redux-mock-store": "^1.2.3",
+    "redux-thunk": "^2.2.0",
     "webpack": "^1.13.3",
+    "jsonwebtoken": "^7.4.0",
     "webpack-sources": "^1.1.0",
     "d3-scale": "^1.0.3",
     "turf-overlaps": "^1.0.3",
     "@types/d3-scale": "^1.0.4",
+    "sprintf-js": "^1.0.3",
+    "geojson-utils": "^1.1.0",
+    "json-stable-stringify": "^1.0.1",
     "firebase": "^3.8.0",
     "express": "^4.14.1",
+    "express-handlebars": "^3.0.0",
     "polyline": "^0.2.0",
     "googleapis": "^16.1.0",
     "morgan": "^1.8.0",
@@ -34,21 +98,24 @@
     "@turf/helpers": "^3.5.2",
     "@turf/bbox-polygon": "^3.5.2",
     "js-cookie": "^2.1.3",
+    "request": "^2.81.0",
     "rbush": "^2.0.1",
-    "react": "^15.4.2",
+    "node-cache": "^4.1.1",
     "source-map-loader": "^0.1.5",
-    "sprintf-js": "^1.0.3",
     "classnames": "^2.2.5",
-    "react-dom": "^15.4.2",
-    "redux": "^3.7.1",
-    "connect-gzip-static": "^1.0.0"
+    "connect-gzip-static": "^1.0.0",
+    "ws": "^3.1.0"
   },
   "devDependencies": {
-    "prettier": "^1.4.4"
+    "prettier": "^1.4.4",
+    "mocha": "^2.5.3",
+    "tslint": "^5.8.0"
   },
   "scripts": {
     "develop": "./scripts/develop.sh",
-    "prettier": "./scripts/prettier.sh --write"
+    "prettier": "./scripts/prettier.sh --write",
+    "lint": "tslint --type-check --project tsconfig.json",
+    "test": "yarn prettier-test && yarn lint && yarn build && yarn sub-builds && yarn coverage && yarn webpack-all && yarn check-yarn"
   },
   "author": "Sidewalk Engineers <eng@sidewalklabs.com>"
 }
