--- a/package.json
+++ b/package.json
@@ -111,7 +111,8 @@
     "prettier": "./scripts/prettier.sh --write",
     "lint": "tslint --type-check --project tsconfig.json",
     "tsc": "tsc",
-    "test": "yarn prettier-test && yarn lint && yarn build && yarn sub-builds && yarn coverage && yarn webpack-all && yarn check-yarn"
+    "test":
+      "yarn prettier-test && yarn lint && yarn build && yarn sub-builds && yarn coverage && yarn webpack-all && yarn check-yarn"
   },
   "author": "Sidewalk Engineers <eng@sidewalklabs.com>"
 }
