--- a/package.json
+++ b/package.json
@@ -110,9 +110,12 @@
   "scripts": {
     "develop": "./scripts/develop.sh",
     "prettier": "./scripts/prettier.sh --write",
+    "prettier-test": "./scripts/prettier.sh --list-different",
     "lint": "tslint --project tsconfig.json",
     "tsc": "tsc",
-    "test": "yarn prettier-test && yarn lint && yarn build && yarn sub-builds && yarn coverage && yarn webpack-all && yarn check-yarn"
+    "webpack": "webpack --config packages/transit/webpack.config.js",
+    "test": "mocha --compilers ts:ts-node/register **/*_test.ts",
+    "circleci": "yarn prettier-test && yarn lint && yarn tsc && yarn test && yarn webpack"
   },
   "author": "Sidewalk Engineers <eng@sidewalklabs.com>"
 }
