--- a/package.json
+++ b/package.json
@@ -16,13 +16,10 @@
     "@types/cookie": "^0.3.0",
     "@types/d3-scale": "^1.0.4",
     "@types/express": "^4.0.35",
-    "@types/express-handlebars": "^0.0.29",
     "@types/geojson": "0.0.31",
-    "@types/google.analytics": "0.0.28",
     "@types/googlemaps": "^3.26.15",
     "@types/js-cookie": "^2.0.28",
     "@types/json-stable-stringify": "^1.0.29",
-    "@types/jsonwebtoken": "^7.2.0",
     "@types/lodash": "^4.14.104",
     "@types/mocha": "^2.2.39",
     "@types/node-cache": "^3.0.31",
@@ -30,7 +27,6 @@
     "@types/rbush": "^2.0.2",
     "@types/react": "^16.0.40",
     "@types/react-dom": "^16.0.4",
-    "@types/redux-mock-store": "^0.0.7",
     "@types/request": "^0.0.45",
     "@types/sprintf-js": "0.0.27",
     "@types/tmp": "^0.0.32",
@@ -47,15 +43,12 @@
     "cookie": "^0.3.1",
     "d3-scale": "^1.0.3",
     "express": "^4.14.1",
-    "express-handlebars": "^3.0.0",
-    "firebase": "^3.8.0",
     "fs": "^0.0.1-security",
     "geojson-utils": "^1.1.0",
     "googleapis": "^16.1.0",
     "js-cookie": "^2.1.3",
     "json-loader": "^0.5.7",
     "json-stable-stringify": "^1.0.1",
-    "jsonwebtoken": "^7.4.0",
     "license-webpack-plugin": "^1.1.1",
     "lodash": "^4.17.5",
     "morgan": "^1.8.0",
@@ -77,17 +70,11 @@
     "react-file-reader": "^1.1.1",
     "react-image-magnify": "^1.8.0",
     "react-measure": "^1.4.7",
-    "react-redux": "^5.0.4",
     "react-resizable": "^1.7.5",
-    "react-router-dom": "^4.2.2",
-    "react-router-hash-link": "^1.1.1",
     "react-tabs": "^0.8.2",
     "react-tap-event-plugin": "^2.0.1",
     "react-upload-file": "^2.0.0-beta.6",
     "reactable": "^0.14.1",
-    "redux": "^3.7.1",
-    "redux-mock-store": "^1.2.3",
-    "redux-thunk": "^2.2.0",
     "request": "^2.85.0",
     "source-map-loader": "^0.1.5",
     "sprintf-js": "^1.0.3",
@@ -99,8 +86,7 @@
     "typescript": "^2.6.2",
     "underscore": "^1.8.3",
     "webpack": "^1.13.3",
-    "webpack-sources": "^1.1.0",
-    "ws": "^3.1.0"
+    "webpack-sources": "^1.1.0"
   },
   "devDependencies": {
     "mocha": "^2.5.3",
