--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/d3-scale": "^1.0.4",
     "@types/express": "^4.0.35",
     "@types/geojson": "0.0.31",
+    "@types/google.analytics": "^0.0.39",
     "@types/googlemaps": "^3.26.15",
     "@types/js-cookie": "^2.0.28",
     "@types/json-stable-stringify": "^1.0.29",
