--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "@types/cookie": "^0.3.0",
     "@types/d3-scale": "^1.0.4",
     "@types/express": "^4.0.35",
-    "@types/geojson": "0.0.31",
+    "@types/geojson": "^7946.0.2",
     "@types/google.analytics": "^0.0.39",
     "@types/googlemaps": "^3.26.15",
     "@types/js-cookie": "^2.0.28",
     "@types/json-stable-stringify": "^1.0.29",
     "@types/lodash": "^4.14.104",
+    "@types/mapbox-gl": "^0.44.1",
     "@types/mocha": "^2.2.39",
     "@types/node-cache": "^3.0.31",
     "@types/prop-types": "^15.5.1",
@@ -30,6 +31,7 @@
     "@types/react-dom": "^16.0.4",
     "@types/request": "^0.0.45",
     "@types/sprintf-js": "0.0.27",
+    "@types/supercluster": "^3.0.2",
     "@types/tmp": "^0.0.32",
     "@types/underscore": "^1.7.36",
     "@types/ws": "^3.0.2",
@@ -52,6 +54,7 @@
     "json-stable-stringify": "^1.0.1",
     "license-webpack-plugin": "^1.1.1",
     "lodash": "^4.17.5",
+    "mapbox-gl": "^0.44.2",
     "morgan": "^1.8.0",
     "net": "^1.0.2",
     "node-cache": "^4.1.1",
@@ -70,6 +73,7 @@
     "react-dropzone": "^3.6.0",
     "react-file-reader": "^1.1.1",
     "react-image-magnify": "^1.8.0",
+    "react-mapbox-gl": "^3.8.0",
     "react-measure": "^1.4.7",
     "react-resizable": "^1.7.5",
     "react-tabs": "^0.8.2",
