--- a/package.json
+++ b/package.json
@@ -5,9 +5,6 @@
   "main": "index.js",
   "license": "Apache-2.0",
   "dependencies": {
-    "@turf/bbox-polygon": "^3.5.2",
-    "@turf/helpers": "^3.5.2",
-    "@turf/inside": "^3.5.2",
     "@types/chai": "^3.4.35",
     "@types/chai-as-promised": "^0.0.29",
     "@types/chai-http": "^0.0.30",
@@ -16,20 +13,21 @@
     "@types/cookie": "^0.3.0",
     "@types/d3-scale": "^1.0.4",
     "@types/express": "^4.0.35",
-    "@types/geojson": "0.0.31",
+    "@types/geojson": "^7946.0.2",
     "@types/google.analytics": "^0.0.39",
-    "@types/googlemaps": "^3.26.15",
+    "@types/googlemaps": "^3.30.8",
     "@types/js-cookie": "^2.0.28",
     "@types/json-stable-stringify": "^1.0.29",
     "@types/lodash": "^4.14.104",
+    "@types/mapbox-gl": "^0.44.1",
     "@types/mocha": "^2.2.39",
     "@types/node-cache": "^3.0.31",
     "@types/prop-types": "^15.5.1",
-    "@types/rbush": "^2.0.2",
     "@types/react": "^16.0.40",
     "@types/react-dom": "^16.0.4",
     "@types/request": "^0.0.45",
     "@types/sprintf-js": "0.0.27",
+    "@types/supercluster": "^3.0.2",
     "@types/tmp": "^0.0.32",
     "@types/underscore": "^1.7.36",
     "@types/ws": "^3.0.2",
@@ -46,36 +44,23 @@
     "express": "^4.14.1",
     "fs": "^0.0.1-security",
     "geojson-utils": "^1.1.0",
-    "googleapis": "^16.1.0",
     "js-cookie": "^2.1.3",
     "json-loader": "^0.5.7",
     "json-stable-stringify": "^1.0.1",
     "license-webpack-plugin": "^1.1.1",
     "lodash": "^4.17.5",
+    "mapbox-gl": "^0.44.2",
     "morgan": "^1.8.0",
     "net": "^1.0.2",
     "node-cache": "^4.1.1",
     "nodemon": "^1.15.1",
     "polyline": "^0.2.0",
     "prop-types": "^15.5.8",
-    "rbush": "^2.0.1",
     "react": "^15.4.2",
     "react-addons-test-utils": "^15.4.2",
-    "react-bootstrap": "^0.30.10",
-    "react-color": "^2.2.7",
-    "react-copy-to-clipboard": "^5.0.1",
-    "react-dnd": "^2.5.1",
-    "react-dnd-html5-backend": "^2.5.1",
     "react-dom": "^15.4.2",
-    "react-dropzone": "^3.6.0",
-    "react-file-reader": "^1.1.1",
-    "react-image-magnify": "^1.8.0",
+    "react-mapbox-gl": "^3.8.0",
     "react-measure": "^1.4.7",
-    "react-resizable": "^1.7.5",
-    "react-tabs": "^0.8.2",
-    "react-tap-event-plugin": "^2.0.1",
-    "react-upload-file": "^2.0.0-beta.6",
-    "reactable": "^0.14.1",
     "request": "^2.85.0",
     "source-map-loader": "^0.1.5",
     "sprintf-js": "^1.0.3",
@@ -83,7 +68,6 @@
     "tmp": "^0.0.31",
     "topojson-client": "^2.1.0",
     "ts-node": "^5.0.1",
-    "turf-overlaps": "^1.0.3",
     "typescript": "^2.6.2",
     "underscore": "^1.8.3",
     "webpack": "^1.13.3",
