Rename pods and deployments

--- a/packages/transit/deploy/deployment-template.yaml
+++ b/packages/transit/deploy/deployment-template.yaml
@@ -1,7 +1,7 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: ttx
+  name: ttx-web
 spec:
   strategy:
     type: RollingUpdate
@@ -11,9 +11,9 @@ spec:
   replicas: 1
   template:
     metadata:
-      name: ttx
+      name: ttx-web
       labels:
-        app: ttx
+        app: ttx-web
         # Note that version must stay stable so that the replace command knows
         # to actually tie the new replicaset with the older one, and eventually
         # scale down the old replicaset.
@@ -22,9 +22,9 @@ spec:
       # Any changes in this section will cause a new replicaset to perform a
       # rolling update of the transit server.
       containers:
-      - name: ttx
-        image: us.gcr.io/nyc-tlc-1225/transit-ttx
-        command: [ "yarn", "develop", "--", "transit", "router-url", "http://router-ttx" ]
+      - name: ttx-web
+        image: us.gcr.io/nyc-tlc-1225/ttx-web
+        command: [ "yarn", "develop", "--", "transit", "router-url", "http://ttx-router" ]
         ports:
         - containerPort: 1337
         livenessProbe:
