--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,10 +47,10 @@ jobs:
           command: git rev-parse --short=8 HEAD > /tmp/tag
       - run:
           name: Build image
-          command: docker build . -t us.gcr.io/nyc-tlc-1225/transit-ttx:$(cat /tmp/tag)
+          command: docker build . -t us.gcr.io/nyc-tlc-1225/ttx-web:$(cat /tmp/tag)
       - run:
           name: Push image
-          command: gcloud docker -- push us.gcr.io/nyc-tlc-1225/transit-ttx:$(cat /tmp/tag)
+          command: gcloud docker -- push us.gcr.io/nyc-tlc-1225/ttx-web:$(cat /tmp/tag)
       - run:
           name: Create K8s configs
           command: |
@@ -62,8 +62,8 @@ jobs:
                         "spec": {
                           "containers": [
                                 {
-                                    "name": "ttx",
-                                    "image": "us.gcr.io/nyc-tlc-1225/transit-ttx:'$(cat /tmp/tag)'"
+                                    "name": "ttx-web",
+                                    "image": "us.gcr.io/nyc-tlc-1225/ttx-web:'$(cat /tmp/tag)'"
                                 }
                             ]
                         }
