--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/prop-types": "^15.5.1",
     "@types/react": "^16.3.12",
     "@types/react-dom": "^16.0.5",
+    "@types/react-slick": "^0.23.0",
     "@types/request": "^0.0.45",
     "@types/sprintf-js": "0.0.27",
     "@types/supercluster": "^3.0.2",
@@ -61,7 +62,9 @@
     "react-dom": "^16.3.2",
     "react-mapbox-gl": "^3.8.0",
     "react-measure": "^1.4.7",
+    "react-slick": "^0.23.1",
     "request": "^2.85.0",
+    "slick-carousel": "^1.8.1",
     "source-map-loader": "^0.1.5",
     "sprintf-js": "^1.0.3",
     "tls": "^0.0.1",
