--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "prettier": "./scripts/prettier.sh --write",
     "prettier-test": "./scripts/prettier.sh --list-different",
     "lint": "tslint --project tsconfig.json",
+    "serve": "ts-node packages/transit/server/server.ts",
     "tsc": "tsc",
     "webpack": "webpack --config packages/transit/webpack.config.js",
     "test": "mocha --compilers ts:ts-node/register **/*_test.ts",
