--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "chai-http": "^3.0.0",
     "chai-roughly": "^1.0.0",
     "classnames": "^2.2.5",
+    "commander": "^2.15.1",
     "compression": "^1.6.2",
     "connect-gzip-static": "^1.0.0",
     "cookie": "^0.3.1",
