--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "d3-scale": "^1.0.3",
     "express": "^4.14.1",
     "fs": "^0.0.1-security",
+    "geojson-utils": "^1.1.0",
     "js-cookie": "^2.1.3",
     "json-loader": "^0.5.7",
     "json-stable-stringify": "^1.0.1",
@@ -54,6 +55,7 @@
     "net": "^1.0.2",
     "node-cache": "^4.1.1",
     "nodemon": "^1.15.1",
+    "polyline": "^0.2.0",
     "prop-types": "^15.5.8",
     "react": "^16.3.2",
     "react-addons-test-utils": "^15.4.2",
@@ -67,6 +69,7 @@
     "sprintf-js": "^1.0.3",
     "tls": "^0.0.1",
     "tmp": "^0.0.31",
+    "topojson-client": "^2.1.0",
     "ts-node": "^5.0.1",
     "typescript": "^2.6.2",
     "underscore": "^1.8.3",
