--- a/package.json
+++ b/package.json
@@ -42,10 +42,12 @@
     "compression": "^1.6.2",
     "connect-gzip-static": "^1.0.0",
     "cookie": "^0.3.1",
+    "copy-webpack-plugin": "^4.5.1",
     "d3-scale": "^1.0.3",
     "express": "^4.14.1",
     "fs": "^0.0.1-security",
     "geojson-utils": "^1.1.0",
+    "html-webpack-plugin": "^3.2.0",
     "js-cookie": "^2.1.3",
     "json-loader": "^0.5.7",
     "json-stable-stringify": "^1.0.1",
@@ -87,7 +89,7 @@
     "prettier": "./scripts/prettier.sh --write",
     "prettier-test": "./scripts/prettier.sh --list-different",
     "lint": "tslint --project tsconfig.json",
-    "serve": "ts-node packages/transit/server/server.ts",
+    "serve": "yarn webpack && ts-node packages/transit/server/server.ts",
     "tsc": "tsc",
     "webpack": "webpack --config packages/transit/webpack.config.js",
     "test": "mocha --compilers ts:ts-node/register **/*_test.ts",
