--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -113,7 +113,7 @@ workflows:
             - build
           filters:
             branches:
-              only: master
+              only: bikesharetimes
       - deploy-staging:
           requires:
             - publish-docker
