--- a/packages/transit/deploy/deployment-template.yaml
+++ b/packages/transit/deploy/deployment-template.yaml
@@ -1,3 +1,17 @@
+apiVersion: v1
+kind: Service
+metadata:
+  name: totx-web
+spec:
+  selector:
+    app: totx-web
+  ports:
+    - name: http
+      protocol: TCP
+      port: 80
+      targetPort: 1337
+  type: NodePort
+---
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
