Fix issue where if you dragged origin marker, destination jumped to new origin.

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "license": "Apache-2.0",
   "dependencies": {
+    "@mapbox/polyline": "^1.0.0",
     "@types/chai": "^3.4.35",
     "@types/chai-as-promised": "^0.0.29",
     "@types/chai-http": "^0.0.30",
@@ -19,7 +20,7 @@
     "@types/js-cookie": "^2.0.28",
     "@types/json-stable-stringify": "^1.0.29",
     "@types/lodash": "^4.14.104",
-    "@types/mapbox-gl": "^0.44.1",
+    "@types/mapbox-gl": "^0.45.2",
     "@types/mocha": "^2.2.39",
     "@types/node-cache": "^3.0.31",
     "@types/prop-types": "^15.5.1",
@@ -53,12 +54,11 @@
     "json-stable-stringify": "^1.0.1",
     "license-webpack-plugin": "^1.1.1",
     "lodash": "^4.17.5",
-    "mapbox-gl": "^0.45.0",
+    "mapbox-gl": "0.47.0",
     "morgan": "^1.8.0",
     "net": "^1.0.2",
     "node-cache": "^4.1.1",
     "nodemon": "^1.15.1",
-    "polyline": "^0.2.0",
     "prop-types": "^15.5.8",
     "react": "^16.3.2",
     "react-addons-test-utils": "^15.4.2",
