--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "json-stable-stringify": "^1.0.1",
     "license-webpack-plugin": "^1.1.1",
     "lodash": "^4.17.5",
-    "mapbox-gl": "0.47.0",
+    "mapbox-gl": "^0.47.0",
     "morgan": "^1.8.0",
     "net": "^1.0.2",
     "node-cache": "^4.1.1",
