Upgrade lodash dependency

--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "json-loader": "^0.5.7",
     "json-stable-stringify": "^1.0.1",
     "license-webpack-plugin": "^1.1.1",
-    "lodash": "^4.17.5",
+    "lodash": "^4.17.13",
     "mapbox-gl": "^0.47.0",
     "morgan": "^1.8.0",
     "net": "^1.0.2",
@@ -75,7 +75,8 @@
     "typescript": "^2.6.2",
     "underscore": "^1.8.3",
     "webpack": "^1.13.3",
-    "webpack-sources": "^1.1.0"
+    "webpack-sources": "^1.1.0",
+    "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
     "mocha": "^2.5.3",
@@ -94,7 +95,7 @@
     "circleci": "yarn prettier-test && yarn lint && yarn tsc && yarn test && yarn webpack"
   },
   "author": "Sidewalk Engineers <eng@sidewalklabs.com>",
-  "resolutions":{
+  "resolutions": {
     "mapbox-gl/gray-matter/js-yaml": "3.13.1"
   }
 }
