--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "webpack-sources": "^1.1.0"
   },
   "devDependencies": {
-    "mocha": "^2.5.3",
+    "mocha": "6.2.0",
     "prettier": "^1.4.4",
     "tslint": "^5.9.1"
   },
@@ -90,7 +90,7 @@
     "serve": "ts-node packages/transit/server/server.ts",
     "tsc": "tsc",
     "webpack": "webpack --config packages/transit/webpack.config.js",
-    "test": "mocha --compilers ts:ts-node/register **/*_test.ts",
+    "test": "mocha --require ts-node/register \"**/*_test.ts\"",
     "circleci": "yarn prettier-test && yarn lint && yarn tsc && yarn test && yarn webpack"
   },
   "author": "Sidewalk Engineers <eng@sidewalklabs.com>",
