--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "awesome-typescript-loader": "^3.0.0-beta.18",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
-    "chai-http": "^3.0.0",
+    "chai-http": "4.3.0",
     "chai-roughly": "^1.0.0",
     "classnames": "^2.2.5",
     "commander": "^2.15.1",
